docs-archive/versioned_docs/version-1.0.0/docs/managed-datahub/managed-datahub-overview.md
---
title: How DataHub Cloud compares to DataHub
slug: /managed-datahub/managed-datahub-overview
custom_edit_url: >-
  https://github.com/datahub-project/datahub/blob/master/docs/managed-datahub/managed-datahub-overview.md
---
# How DataHub Cloud compares to DataHub

DataHub is the #1 open source data catalog for developers.

DataHub Cloud takes DataHub to the next level by offering features that allow
you to roll out the product to the entire organization beyond your central data
platform team.

We’ve organized this comparison using a few categories. We love well-organized
checklists and we hope you love them too!

## Search and Discovery
Features aimed at making it easy to discover data assets at your organization and understand relationships between them.

| Feature | DataHub | DataHub Cloud | 
| ---------------------------------------------- | ------- | ------------- |
| Integrations for 50+ data sources | ✅ | ✅ | 
| Table level, Column-level, Job-level lineage | ✅ | ✅ |
| Search across all metadata (technical, operational, business) | ✅ | ✅ |
| Usage and graph-based search ranking | ❌ | ✅ |
| Table and column-level lineage and impact analysis | ✅ | ✅ |
| Support for domains, data products, data contracts | ✅ | ✅ |
| Developer friendly experiences (for data engineers, AI engineers, etc.) | ✅ | ✅ |
| Business User friendly experiences (for data analysts, BI analysts, data governance leads, PMs etc.) | ❌ | ✅ |
| Personalization across the product | ❌ | ✅ |
| Browser extension for BI Tools | ❌ | ✅ |
| No-code metadata automations for automated enrichment | ❌ | ✅ |
| Slack integration | ❌ | ✅ |
| Subscribe to assets, activity, and notifications | ❌ | ✅ |

## Data Governance
Features that help you govern the crown jewels of your organization, and trim
out the datasets that seem to grow like weeds when no one’s looking.

| Feature | DataHub | DataHub Cloud |
| ---------------------------------------------- | ------- | ------------- |
| Shift-Left governance | ✅ | ✅ |
| Dataset ownership management | ✅ | ✅ |
| Business glossary basics | ✅ | ✅ |
| Human-assisted Asset Certification Workflows (data owners, stewards) | ❌ | ✅ |
| Computational Governance standards as continuous tests | ❌ | ✅ |
| Approval Workflows - Business glossary modifications | ❌ | ✅ |
| Approval Workflows - Associating glossary terms with assets | ❌ | ✅ |
| Approval Workflows - Ownership | ❌ | ✅ |

## Data Observability
Features that help you ensure your data pipelines are producing high quality
assets, and if they’re not, making sure you and impacted users are the first to
know. 

| Feature | DataHub | DataHub Cloud |
| ---------------------------------------------- | ------- | ------------- |
| Surface data quality results | ✅ | ✅ |
| Create data contracts | ✅ | ✅ |
| Raise and Resolve Data Incidents | ✅ | ✅ |
| Monitor Freshness SLAs | ❌ | ✅ |
| Monitor Table Schemas | ❌ | ✅ |
| Monitor Table Volume | ❌ | ✅ |
| Monitor Table Column Integrity | ❌ | ✅ |
| Monitor Table with Custom SQL | ❌ | ✅ |
| Receive Notifications via Email & Slack | ❌ | ✅ |
| Manage Data Incidents via Slack | ❌ | ✅ |
| View Data Health Dashboard | ❌ | ✅ |
| Evaluate data quality checks on-demand (API + UI) | ❌ | ✅ |
| Evaluate data quality checks in your VPC | ❌ | ✅ |


## Enterprise Grade
Features needed to roll out at scale to large enterprises.

| Feature | DataHub | DataHub Cloud |
| ---------------------------------------------- | ------- | ------------- |
| Battle-tested open source metadata platform | ✅ | ✅ |
| Metadata change events as a real-time stream | ✅ | ✅ |
| 99.5% Uptime SLA | ❌ | ✅ |
| Data Lake and Data Warehouse off-ramp for metadata analytics | ❌ | ✅ |
| Fine-grained access control policies (e.g., default DENY) | ❌ | ✅ |
| Pre-defined roles for permissions | ❌ | ✅ |
| Shared audit logs | ❌ | ✅ |


## Implementation and Support
Features related to ease of deployment and maintenance.

| Feature | DataHub | DataHub Cloud |
| ---------------------------------------------- | ------- | ------------- |
| Community support | ✅ | ✅ |
| Your own engineering team | ✅ | ❌ (They can instead focus on high-value work like contributing features to the open source product, or build amazing data applications with the APIs!)|
| Your private fork of DataHub | ✅ | ❌ (You won't need to manage and maintain your own fork, upgrade to latest releases etc.)|
| Accelerators for your code contributions to DataHub | ❌ | ✅ |
| Cloud-hosted instance (AWS, GCP, BYOC) | ❌ | ✅ |
| Support for AWS PrivateLink, IP address restrictions, etc. | ❌ | ✅ |
| Dedicated customer success team | ❌ | ✅ |
| Implementation Support | ❌ | ✅ |
| Ingestion Support | ❌ | ✅ |
| Dedicated Slack Support | ❌ | ✅ |

## More Questions?

Have more questions and want to talk to someone? Fill out
the form using the link below, and someone from the Acryl team will reach
out to set up a chat.

<a href="https://www.acryldata.io/sign-up?utm_source=datahub&utm_medium=referral&utm_campaign=acryl_vs_datahub" style={{ display: 'inline-block', padding: '10px 20px', margin: '10px 0', backgroundColor: '#007bff', color: 'white', borderRadius: '5px', textDecoration: 'none', textAlign: 'center' }}>
  Learn about DataHub Cloud
</a>

<!-- 
Fill out
[this form](https://www.acryldata.io/sign-up?utm_source=datahubproject&utm_content=acryl_vs_datahub), and someone from the Acryl team will reach out to set up a chat. 


 ## Chrome Extension

- [Early Access to the DataHub Chrome Extension](docs/managed-datahub/chrome-extension.md)

## Additional Integrations

- [Slack Integration](docs/managed-datahub/slack/saas-slack-setup.md)
- [Remote Ingestion Executor](docs/managed-datahub/operator-guide/setting-up-remote-ingestion-executor.md)
- [AWS Privatelink](docs/managed-datahub/integrations/aws-privatelink.md)
- [AWS Eventbridge](docs/managed-datahub/operator-guide/setting-up-events-api-on-aws-eventbridge.md)

## Additional SSO/Login Support

- [OIDC SSO Integration in the UI](docs/managed-datahub/integrations/oidc-sso-integration.md)

## Expanded API Features

- [Entity Events API](docs/managed-datahub/datahub-api/entity-events-api.md)

## More Ways to Act on Metadata

- [Approval Workflows](docs/managed-datahub/approval-workflows.md)
- [Metadata Tests](docs/tests/metadata-tests.md) -->
