docs-archive/versioned_docs/version-1.1.0/docs/managed-datahub/managed-datahub-overview.md
---
title: How DataHub Cloud compares to DataHub
slug: /managed-datahub/managed-datahub-overview
custom_edit_url: >-
  https://github.com/datahub-project/datahub/blob/master/docs/managed-datahub/managed-datahub-overview.md
---
# How DataHub Cloud compares to DataHub

## DataHub Cloud: AI & Data Context Platform

DataHub Cloud delivers a fully-managed version of DataHub's powerful metadata platform, offering enhanced capabilities for data discovery, observability, and governance that accelerate the production-readiness of your data and AI assets.

### Enterprise-Grade Service

- **Proven Implementation Service** tailored to your organization's specific needs
- **SLA-Backed Reliability** ensuring 99.5% uptime for critical operations
- **Optimized Performance** with infrastructure fine-tuned and managed by experts
- **Flexible Deployment Options** for the most sensitive data scenarios
- **Enhanced Security Controls** meeting enterprise compliance requirements

### Accelerated Adoption

- **Comprehensive Team Training** to maximize platform utilization
- **Expert Support** providing guidance through your data journey

### Add-on Capabilities

- **Enhanced Discovery & Understanding** with personalized user experiences, AI-generated documentation and propagation, and collaboration features
- **Improved Data Quality Monitoring** with ability to run quality checks, use AI anomaly detection, and comprehensively monitor data assets
- **Robust Governance Mechanisms** with dynamic compliance forms, certification & approval workflows, and enforced governance standards

DataHub Cloud empowers organizations to unlock the full potential of their data assets through superior discovery capabilities, comprehensive observability, and robust governance—all within a managed, secure environment.

## Enterprise-Grade Managed Service

Features needed to roll out at scale to large enterprises.

| Feature                                                                                                 | DataHub | DataHub Cloud |
| ------------------------------------------------------------------------------------------------------- | ------- | ------------- |
| Battle-tested open source metadata platform                                                             | ✅      | ✅            |
| Metadata change events as a real-time consumable stream                                                 | ✅      | ✅            |
| Pre-defined roles for permissions                                                                       | ✅      | ✅            |
| 99.5% Uptime SLA                                                                                        | ❌      | ✅            |
| In-VPC Remote Execution Agent to run tasks that communicate with sensitive data sources                 | ❌      | ✅            |
| Data off-ramp for metadata analytics                                                                    | ❌      | ✅            |
| Enterprise RBAC support with additional permissions for declaring domain- or attribute-scoped personas. | ❌      | ✅            |
| Shared audit logs                                                                                       | ❌      | ✅            |
| SOC-2 Compliant                                                                                         | ❌      | ✅            |

## Implementation and Support

Features related to ease of deployment and maintenance.

| Feature                                                    | DataHub | DataHub Cloud                                                                                                                                           |
| ---------------------------------------------------------- | ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Community support                                          | ✅      | ✅                                                                                                                                                      |
| Your own engineering team                                  | ✅      | ❌ (They can instead focus on high-value work like contributing features to the open source product, or build amazing data applications with the APIs!) |
| Your private fork of DataHub                               | ✅      | ❌ (You won't need to manage and maintain your own fork, upgrade to latest releases etc.)                                                               |
| Cloud-hosted instance (AWS, GCP, BYOC)                     | ❌      | ✅                                                                                                                                                      |
| Monitored and managed by DataHub engineers                 | ❌      | ✅                                                                                                                                                      |
| Dedicated customer success team                            | ❌      | ✅                                                                                                                                                      |
| Implementation Advisory and Support                        | ❌      | ✅                                                                                                                                                      |
| Ingestion Support                                          | ❌      | ✅                                                                                                                                                      |
| Accelerators for your code contributions to DataHub        | ❌      | ✅                                                                                                                                                      |
| Support for AWS PrivateLink, IP address restrictions, etc. | ❌      | ✅                                                                                                                                                      |
| Dedicated Zendesk Support                                  | ❌      | ✅                                                                                                                                                      |

## Data Discovery

Features aimed at making it easy to discover data assets at your organization and understand relationships between them.

| Feature                                                                                              | DataHub | DataHub Cloud |
| ---------------------------------------------------------------------------------------------------- | ------- | ------------- |
| Integrations for 70+ data sources                                                                    | ✅      | ✅            |
| Metadata transformers to enrich metadata at ingestion time                                           | ✅      | ✅            |
| Table level, Column-level, Job-level lineage                                                         | ✅      | ✅            |
| Search across all metadata (technical, operational, business)                                        | ✅      | ✅            |
| Table and column-level lineage and impact analysis                                                   | ✅      | ✅            |
| Support for domains, data products, data contracts                                                   | ✅      | ✅            |
| Developer friendly experiences (for data engineers, AI engineers, etc.)                              | ✅      | ✅            |
| Business User friendly experiences (for data analysts, BI analysts, data governance leads, PMs etc.) | ✅      | ✅            |
| Personalization across the product                                                                   | ✅      | ✅            |
| Browser extension for BI Tools                                                                       | ✅      | ✅            |
| UI-based Automatic Documentation and Classification propagation across lineage                       | ❌      | ✅            |
| Usage and graph-based search ranking                                                                 | ❌      | ✅            |
| Generative AI to accelerate documentation and metadata-completeness                                  | ❌      | ✅            |
| Slack integration                                                                                    | ❌      | ✅            |
| Subscribe to assets, activity, and notifications                                                     | ❌      | ✅            |

## Data Observability

Features that help you ensure your data pipelines are producing high quality
assets, and if they’re not, making sure you and impacted users are the first to
know.

| Feature                                                      | DataHub | DataHub Cloud |
| ------------------------------------------------------------ | ------- | ------------- |
| Surface data quality results across the catalog              | ✅      | ✅            |
| Data Quality Impact Analysis in Lineage                      | ✅      | ✅            |
| Create Data Contracts                                        | ✅      | ✅            |
| Manage Data Incidents                                        | ✅      | ✅            |
| Rich In-Slack Incident management                            | ❌      | ✅            |
| Run Data Quality checks in-VPC                               | ❌      | ✅            |
| AI Anomaly Detection for Freshness, Volume, and Column stats | ❌      | ✅            |
| Monitor Freshness SLAs                                       | ❌      | ✅            |
| Monitor Table Schemas                                        | ❌      | ✅            |
| Monitor Table Volume                                         | ❌      | ✅            |
| Monitor Column Quality                                       | ❌      | ✅            |
| Monitor with Custom SQL                                      | ❌      | ✅            |
| Get Notified where you work (Slack, Email, more)             | ❌      | ✅            |
| Birds-eye view Data Health Dashboard, with Quality trends    | ❌      | ✅            |
| Evaluate data contracts on-demand (API)                      | ❌      | ✅            |
| Evaluate data quality checks on-demand (API + UI)            | ❌      | ✅            |

## Data Governance

Features that help you govern the crown jewels of your organization, and trim
out the datasets that seem to grow like weeds when no one's looking.

| Feature                                                                   | DataHub | DataHub Cloud |
| ------------------------------------------------------------------------- | ------- | ------------- |
| Shift-Left governance                                                     | ✅      | ✅            |
| Dataset ownership management                                              | ✅      | ✅            |
| Business glossary basics                                                  | ✅      | ✅            |
| Shift-Left automations (i.e., source system sync back of metadata)        | ❌      | ✅            |
| Human-assisted Asset Certification Workflows (data owners, stewards)      | ❌      | ✅            |
| Dynamic Compliance Forms, with rich analytics                             | ❌      | ✅            |
| Computational Governance standards as continuous tests                    | ❌      | ✅            |
| Approval Workflows - Business glossary modifications                      | ❌      | ✅            |
| Approval Workflows - Associating glossary terms, tags, owners with assets | ❌      | ✅            |
| Approval Workflows - Documentation modifications                          | ❌      | ✅            |
| AI Classification                                                         | ❌      | ✅ **(beta)** |

## More Questions?

Have more questions and want to talk to someone? Fill out
the form using the link below, and someone from the DataHub team will reach
out to set up a chat.

<a href="https://www.datahub.com/demo?utm_source=datahub&utm_medium=referral&utm_campaign=acryl_vs_datahub" style={{ display: 'inline-block', padding: '10px 20px', margin: '10px 0', backgroundColor: '#007bff', color: 'white', borderRadius: '5px', textDecoration: 'none', textAlign: 'center' }}>
Learn about DataHub Cloud
</a>

<!--
Fill out
[this form](https://www.datahub.com/demo?utm_source=datahubproject&utm_content=acryl_vs_datahub), and someone from the DataHub team will reach out to set up a chat.


 ## Chrome Extension

- [Early Access to the DataHub Chrome Extension](docs/managed-datahub/chrome-extension.md)

## Additional Integrations

- [Slack Integration](docs/managed-datahub/slack/saas-slack-setup.md)
- [Remote Ingestion Executor](docs/managed-datahub/operator-guide/setting-up-remote-ingestion-executor.md)
- [AWS Privatelink](docs/managed-datahub/integrations/aws-privatelink.md)
- [AWS Eventbridge](docs/managed-datahub/operator-guide/setting-up-events-api-on-aws-eventbridge.md)

## Additional SSO/Login Support

- [OIDC SSO Integration in the UI](docs/managed-datahub/integrations/oidc-sso-integration.md)

## Expanded API Features

- [Entity Events API](docs/managed-datahub/datahub-api/entity-events-api.md)

## More Ways to Act on Metadata

- [Approval Workflows](docs/managed-datahub/approval-workflows.md)
- [Metadata Tests](docs/tests/metadata-tests.md) -->
